--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Mood Tracker - loading</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="./pico.min.css" />
     <link rel="stylesheet" href="./pure-min-3.0.0.css" />
     <link rel="stylesheet" href="./style.css" />
