--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
   <head>
     <title>Mood Tracker - loading</title>
     <link rel="manifest" href="manifest.json" />
