use local path for referring to manifest file

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html data-theme="dark">
   <head>
     <title>Mood Tracker - loading</title>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./pico.min.css" />
     <link rel="stylesheet" href="./pure-min-3.0.0.css" />
     <link rel="stylesheet" href="./style.css" />
