--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,18 @@
 <html data-theme="dark">
   <head>
     <title>Mood Tracker - loading</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon-16x16.png"
+      sizes="16x16"
+    />
     <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./pico.min.css" />
     <link rel="stylesheet" href="./pure-min-3.0.0.css" />
