massive rewrite of UI to use @eeue56/coed instead of .innerHtml

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="dark" lang="en-GB">
   <head>
+    <meta charset="UTF-8" />
     <title>Mood Tracker - loading</title>
     <link
       rel="icon"
@@ -19,15 +20,20 @@
       rel="preload"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
-      href="./pico.min.css"
+      href="./style.css"
     />
     <link
       rel="preload"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
-      href="./pure-min-3.0.0.css"
+      href="./css/setup.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+      href="./css/tabs.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
