improve graph styling

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,12 @@
       onload="this.onload=null;this.rel='stylesheet'"
       href="./css/tabs.css"
     />
+    <link
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+      href="./css/graphs.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
